--- a/config/config-base.yml
+++ b/config/config-base.yml
@@ -18,9 +18,11 @@ remora_kmer_table: "resources/kmers/9mer_levels_v1.txt"
 # read classification model - remora trained model to classify charged vs uncharged reads
 remora_cca_classifier: "resources/models/cca_classifier.pt"
 
-# TODO: allow multiple versions
+# software tools
 dorado_version: 0.9.1
 dorado_model: rna004_130bps_sup@v5.1.0
+# note "v"
+modkit_version: v0.4.3
 
 # additional options for particular commands
 opts:
