--- a/config/config-base.yml
+++ b/config/config-base.yml
@@ -22,7 +22,7 @@ remora_cca_classifier: "resources/models/cca_classifier.pt"
 dorado_version: 0.9.1
 dorado_model: rna004_130bps_sup@v5.1.0
 # note "v"
-modkit_version: v0.4.3
+modkit_version: 0.4.3
 
 # additional options for particular commands
 opts:
